# adventofcode-2018

./: .gitignore  .travis.yml  README.md  adventofcode2018.cabal  doctest.hs  wake-up.sh
Day 01 - Chronal Calibration/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 02 - Inventory Management System/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 03 - No Matter How You Slice It/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 04 - Repose Record/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 05 - Alchemical Reduction/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 06 - Chronal Coordinates/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 07 - The Sum of Its Parts/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 08 - Memory Maneuver/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 09 - Marble Mania/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 10 - The Stars Align/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 11 - Chronal Charge/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 12 - Subterranean Sustainability/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 13 - Mine Cart Madness/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 14 - Chocolate Charts/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
Day 15 - Beverage Bandits/: Main.hs  README.md  README.part2.md  answer.md  answer.part2.md
