name:                adventofcode2018
version:             1.1
synopsis:            Advent of Code 2018 puzzles and solutions in Haskell
homepage:            https://github.com/kAworu/adventofcode-2018
license:             MIT
license-file:        LICENSE
author:              Alexandre Perrin
maintainer:          alex@kaworu.ch
build-type:          Simple
extra-source-files:   README.md
cabal-version:       >=1.10

test-suite doctests
  type:                exitcode-stdio-1.0
  main-is:             doctest.hs
  build-depends:       base >= 4.12 && < 4.13,
                       doctest
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

executable Day01
  hs-source-dirs:      "Day 01 - Chronal Calibration"
  main-is:             Main.hs
  build-depends:       base >= 4.12 && < 4.13,
                       parsec >=3.1 && <3.2,
                       containers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day02
  hs-source-dirs:      "Day 02 - Inventory Management System"
  main-is:             Main.hs
  build-depends:       base >= 4.12 && < 4.13,
                       parsec >=3.1 && <3.2
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day03
  hs-source-dirs:      "Day 03 - No Matter How You Slice It"
  main-is:             Main.hs
  build-depends:       base >= 4.12 && < 4.13,
                       parsec >=3.1 && <3.2,
                       containers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day04
  hs-source-dirs:      "Day 04 - Repose Record"
  main-is:             Main.hs
  build-depends:       base >= 4.12 && < 4.13,
                       parsec >=3.1 && <3.2,
                       time
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day05
  hs-source-dirs:      "Day 05 - Alchemical Reduction"
  main-is:             Main.hs
  build-depends:       base   >=4.12 && <4.13,
                       parsec >=3.1 && <3.2,
                       containers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day06
  hs-source-dirs:      "Day 06 - Chronal Coordinates"
  main-is:             Main.hs
  build-depends:       base   >=4.12 && <4.13,
                       parsec >=3.1 && <3.2,
                       containers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day07
  hs-source-dirs:      "Day 07 - The Sum of Its Parts"
  main-is:             Main.hs
  build-depends:       base   >=4.12 && <4.13,
                       parsec >=3.1 && <3.2,
                       containers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable Day08
  hs-source-dirs:      "Day 08 - Memory Maneuver"
  main-is:             Main.hs
  build-depends:       base   >=4.12 && <4.13,
                       parsec >=3.1 && <3.2
  default-language:    Haskell2010
  ghc-options:         -Wall
